--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
           <li class="logged-in" style= "display:none;" >
             <a href="#" class="grey-text" id="logout">Logout</a>
           </li> 
-          <li class="logged-in" style="display: none;">
-            <a href="create.html" class="grey-text modal-trigger" id="IsAdmin" data-target="modal-create">Create Message</a> 
+          <li class="logged-in" style="display: null">
+            <a href="create.html" class="grey-text modal-trigger" id="IsAdmin" data-target="modal-create">Create Service</a> 
           </li> 
           <li class="logged-out" style= "display:none;" >
             <a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
           </li>
           <li class="logged-out" style= "display:none;" >
-            <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
+            <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Register</a>
           </li>
       </ul>
     </div>
@@ -59,7 +59,7 @@
  <!-- SIGN UP MODAL -->
   <div id="modal-signup" class="modal">
     <div class="modal-content">
-      <h4>Sign up</h4><br />
+      <h4>Register</h4><br />
       <form id="signup-form">
         <div class="input-field">
           <input type="email" id="signup-email" required />
@@ -110,16 +110,16 @@
   <!-- CREATE Message MODAL  -->
  <div id="modal-create" class="modal">
   <div class="modal-content">
-    <h4>Create Message</h4><br/>
+    <h4>Create Service Form</h4><br/>
     <form id="create-form">
       </div>
       <div class="input-field">
         <input type="text" id="title" required>
-        <label for="title">Message Name</label>
+        <label for="title">Service Name</label>
       </div>
       <div class="input-field"> 
           <textarea id="content" input type="text" class="materialize-textarea" ></textarea> 
-        <label for="content">Message Content</label>
+        <label for="content">Service Description</label>
       </div> 
       <div class="input-field"> 
         <input type="url" textarea id="link" required>  
@@ -147,9 +147,10 @@
     </div>
   </div>    
 
-  <h5><u>Service Opportunities </u></h5>
 
-  <!-- GUIDE LIST -->
+  <h5 style="margin-left: 25px;"><u>Service Opportunities </u></h5>
+
+  <!-- Messages -->
   <div class="container" style="margin-top: 40px;">      
     <ul class="collapsible z-depth-0 guides" style="border: none;">
     </ul> 
@@ -194,18 +195,9 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
  <script src="scripts/auth.js"></script>
  <script src="scripts/index.js"></script>  
-
-
+ <script src="scripts/favourites.js"></script>
+ <script src="app.js"></script> 
  
-
-  <script src="app.js"></script> 
-
-  <!-- 
-  <h1><small>Welcome</small></h1>
-  <p>
-  <a href="page2.html" target="_self">Link to page 2</a>
-  </p>
-  -->  
 
 
 </body>
