--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
-   <!-- Compiled and minified Bootsrap 
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> --> 
+  
   
    <title>Finesse</title>  
 
@@ -23,13 +22,7 @@
 </head> 
 <body class="grey lighten-3">
 
-  <!-- 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-   -->
-
-	 <!-- NAVBAR -->
+	 <!-- NAVBAR use for abstraction -->
   <nav class="z-depth-0 grey lighten-4">
     <div class="nav-wrapper container">
       <a href="#" class="brand-logo">
@@ -98,8 +91,7 @@
   </div>  
 
 
-
-  <!-- FAVOURITE MODAL -->
+ <!-- FAVOURITE MODAL -->
   <div id="modal-favourite" class="modal">
     <div class="modal-content center-align" id="button"> 
       <h4>Favourites</h4><br/> 
@@ -110,7 +102,7 @@
   <!-- CREATE Message MODAL  -->
  <div id="modal-create" class="modal">
   <div class="modal-content">
-    <h4>Create Service Form</h4><br/>
+    <h4>Create Service Form</h4><br />
     <form id="create-form">
       </div>
       <div class="input-field">
